# my-researcher

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-07.jsonl  2026-07-12.jsonl
src/myresearcher/: __init__.py  cli.py  researcher.py  retrieval.py  synthesis.py
tests/: conftest.py  test_cli.py  test_researcher.py  test_retrieval.py  test_synthesis.py
