[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-researcher"
version = "0.0.1"
description = "Discovers external sources live (web + arXiv), writes a cited study brief per topic, and orders topics into a study path."
authors = [{ name = "Lorenzo Liuzzo", email = "lorenzoliuzzo@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["my-things-core", "my-guard"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "pre-commit>=3"]

[project.scripts]
myresearcher = "myresearcher.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/myresearcher"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: integration/slow tests, excluded from the fast local loop"]
